# dwm

./: .clang-format  .gitignore  CMakeLists.txt  IPCClient.c  autostart.sh  config.h  drw.c  drw.cpp  drw.h  dwm-msg.c  dwm-msg.cpp  dwm.1  dwm.c  dwm.cpp  ipc.c  ipc.cpp  ipc.h  todo.org  transient.c  util.c  util.cpp  version.h.in  version.hpp  yajl_dumps.c  yajl_dumps.h
include/: drw.hpp  ipc.hpp  util.hpp
scripts/: dwm-debug.desktop
